--- a/src/components/DurationSelection.css
+++ b/src/components/DurationSelection.css
@@ -48,6 +48,7 @@
   text-align: center;
   max-width: 800px;
   width: 100%;
+  margin-top: 4rem;
 }
 
 .duration-title {
